%% Entity-relationship diagram — generated by hand from the actual Prisma schema
%%
%% Purpose: the persisted data model, its keys, and the two tables that are
%% joined by a string convention rather than a foreign key.
%%
%% Source of truth: apps/server/prisma/schema.prisma
%% Migrations:      20260808203715_init, 20260809100854_phase1_models
%% Verified 2026-09-03. Every attribute, key, default and onDelete rule below
%% was read out of the schema; nothing is inferred.
%%
%% Not shown because it is not a table: enum Role { OWNER EDITOR VIEWER }.
%% Privilege ORDERING is not in SQL — it lives in ROLE_RANK in
%% apps/server/src/modules/auth/authorize.ts.
%%
%% Indexes (not expressible in Mermaid erDiagram):
%%   Project        @@index([ownerId])
%%   ProjectMember  @@unique([projectId, userId])  @@index([userId])
%%   File           @@unique([projectId, path])
%%   DocUpdate      @@index([docId, id])   <- the load path: snapshot, then id > watermark
%%   DocSnapshot    docId @unique          <- one snapshot per document

erDiagram
  User ||--o{ Project : "owns — onDelete Restrict"
  User ||--o{ ProjectMember : "is a member — onDelete Cascade"
  Project ||--o{ ProjectMember : "grants a role — onDelete Cascade"
  Project ||--o{ File : "contains — onDelete Cascade"
  File ||..o{ DocUpdate : "docId equals projectId:fileId — no foreign key"
  File ||..o| DocSnapshot : "docId equals projectId:fileId — no foreign key"

  User {
    String id PK "cuid"
    String email UK "lowercased on write, so a plain unique index suffices"
    String passwordHash "scrypt, encoded scrypt N r p salt hash"
    String displayName
    DateTime createdAt "now()"
  }

  Project {
    String id PK "cuid"
    String name
    String ownerId FK "denormalized convenience — NOT the authorization source"
    DateTime createdAt "now()"
    DateTime updatedAt "updatedAt"
  }

  ProjectMember {
    String id PK "cuid"
    String projectId FK
    String userId FK
    Role role "OWNER, EDITOR or VIEWER — the authorization source of truth"
    DateTime createdAt "now()"
  }

  File {
    String id PK "cuid"
    String projectId FK
    String path "POSIX, no leading slash, unique within a project"
    String content "DERIVED state, default empty — materialized from the Yjs log"
    Boolean isDir "default false"
    DateTime createdAt "now()"
    DateTime updatedAt "updatedAt"
  }

  DocUpdate {
    BigInt id PK "autoincrement — this is the log order"
    String docId "projectId:fileId — a plain string, deliberately not a FK"
    Bytes update "one MERGED Yjs update per flush, never plain text"
    DateTime createdAt "the compaction cutoff reads this, not id"
  }

  DocSnapshot {
    String id PK "cuid"
    String docId UK "one snapshot per document, replaced in place"
    Bytes snapshot "the folded state through updateId"
    BigInt updateId "highest folded DocUpdate.id — also the compare-and-set token"
    DateTime createdAt "now()"
  }
